fixed postgresql problem